# Graphics_Implementation_C

./: CMakeLists.txt  README.md
.cache/clangd/index/: camera.c.B4C72F44905AB77F.idx  camera.h.50C6E255E0D84BAE.idx  display.c.FD4C4B4A32BD4854.idx  display.h.B139437227CEB90A.idx  graphics.c.DDED6B7A5CBCA2CA.idx  graphics.h.39FD3B7A824AEC97.idx  graphics_math.c.E3BD9C369F1513D0.idx  graphics_math.h.17054134A284752D.idx  main.c.D03CDEA216B405C7.idx  mesh.c.3CEDA8134E6E7205.idx  mesh.h.2A09CEECB602745E.idx  render.c.06AC5CB28C08D427.idx  render.h.9B41B78DD84CB1CA.idx
lib/display/: display.c  display.h
lib/graphics_math/: graphics_math.c  graphics_math.h
lib/mesh/: mesh.c  mesh.h
lib/render/: camera.c  camera.h  render.c  render.h
src/: graphics.c  graphics.h  main.c
validation/: CMakeCache.txt  CMakeLists.txt  Makefile  camera.hpp  cmake_install.cmake  val  validate.cpp
